--- a/front-web/public/index.html
+++ b/front-web/public/index.html
@@ -28,6 +28,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>DS Delivery</title>
+    
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://thiagodcsds2.netlify.app/">
+    <meta property="og:image" content="%PUBLIC_URL%/meta.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
