--- a/front-web/public/index.html
+++ b/front-web/public/index.html
@@ -31,7 +31,7 @@
     
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://thiagodcsds2.netlify.app/">
-    <meta property="og:image" content="%PUBLIC_URL%/meta.png">
+    <meta property="og:image" content="https://thiagodcsds2.netlify.app/meta.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
