--- a/front-web/public/index.html
+++ b/front-web/public/index.html
@@ -29,9 +29,10 @@
     -->
     <title>DS Delivery</title>
     
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://thiagodcsds2.netlify.app/">
-    <meta property="og:image" content="https://thiagodcsds2.netlify.app/meta.png">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://thiagodcsds2.netlify.app/" />
+    <meta property="og:image" content="https://thiagodcsds2.netlify.app/meta.png" />
+    <meta property="og:image:type" content="image/png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
